changed test button to use testMyMethod()

--- a/test.html
+++ b/test.html
@@ -3,10 +3,9 @@
 	<head>
 		<title>Test myMethods.js</title>
 	</head>
-	<script src = "myMethods.js"></script>
 	<body>
-		<b>LESSON 4: CALL A JAVASCRIPT FUNCTION:</b>
-		<input type=button onClick="show_random_number()" value="Generate random number">
-		<input type=button onClick="square(12)" value="Square 12">
+		<input type=button onClick="testMyMethod()" value = "Try it">
+		<p id="demo"></p>
+		<script src = "myMethods.js"></script>
 	</body>
 </html>
